# boxit

./: Cargo.toml  README.md
src/: boxit.rs  compress.rs  files_window.rs  folder.rs  logo.rs  main.rs  title_bar.rs  util.rs  utils.rs
