[package]
name = "boxit"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
webbrowser = "1.0.1"
walkdir = "2.5.0"
tar = "0.4.41"
flate2 = "1.0.33"
image = "*"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
